# espidfCentralHome

./: .gitignore  CMakeLists.txt  buildlog.txt  flash_app0.py  flash_factory.py  littlefs_create_image.cmake  partitions.csv
Esquematico/Adaptador/adaptador_central/: adaptador.FlatPrj  adaptador_central-F_Cu.gbr  adaptador_central-F_Paste.gbr  adaptador_central-NPTH.drl  adaptador_central-PTH.drl  adaptador_central-job.gbrjob  adaptador_central.kicad_pcb  adaptador_central.kicad_prl  adaptador_central.kicad_pro  adaptador_central.kicad_sch  adaptador_central.nc  adaptador_central_furos.nc  adaptador_central_mascara.nc
Esquematico/Central/central/: central-F_Cu.gbr  central-F_Mask.gbr  central-F_Paste.gbr  central-PTH.drl  central-furos.nc  central-job.gbrjob  central-mascara.nc  central.kicad_pcb  central.kicad_prl  (+3 more)
PWA/: health-check.js  index.html  manifest.json  pwa-installer.js  service-worker.js
components/dns_server/: CMakeLists.txt
components/qrcode/: CMakeLists.txt
data/: agenda.html  app.html  atualizar.html  automacao.html  central.html  device_manager.old  index.html  manifest.json
data/config/: automation  config  credential  schedule
data/css/: igra.css
data/device/: 1  2  3  k5k5k5k5k5k5
data/ha/: description.xml  msearch  notify
data/js/: health-check.js  icons.js  messages.js
data/sensor/: w5w5w5w5w5w5
info/: Eventos.xlsx  Sem título 1.xlsx  detalhe_de_evento.dia  diagrama.dia  diagrama.dia.autosave  diagrama.dia~  ícones OLED 128 col 64 lin.xlsx
main/: CMakeLists.txt  automation_manager.cpp  automation_manager.hpp  ble_manager.cpp  ble_manager.hpp  broker_manager.cpp  broker_manager.hpp  device_manager.cpp  device_manager.hpp  dns_manager.cpp  dns_manager.hpp  event_bus.cpp  event_bus.hpp  global_config.cpp  global_config.hpp  hue_manager.cpp  hue_manager.hpp  idf_component.yml  littlefs_console.cpp  main.cpp  matter_manager.cpp  matter_manager.hpp  mqtt_manager.cpp  mqtt_manager.hpp  net_manager.cpp  net_manager.hpp  ota_manager.cpp  ota_manager.hpp  rtc_manager.cpp  rtc_manager.hpp  socket_manager.cpp  socket_manager.hpp  storage.cpp  storage.hpp  storage_bus.cpp  storage_bus.hpp  storage_manager.cpp  storage_manager.hpp  sync_manager.cpp  sync_manager.hpp  (+4 more)
